Fix an issue with visibility

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -202,6 +202,25 @@ h2 {
 }
 
 
+#instructionInterface {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.9);
+    display: flex;
+    align-items: left;
+    flex-direction: column;
+    z-index: 999;
+}
+
+.instructionPg,
+.instructionHeading {
+    display: flex;
+    align-items: left;
+    flex-direction: column;
+}
 
 .scoreHeading {
     color: white;
@@ -247,41 +266,16 @@ h2 {
 
 }
 
-#instruction {
-        position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.7);
-}
-
-#instructionInterface {
+#bathroomLevCompleted,
+#bedroomLevCompleted,
+#kitchenLevCompleted,
+#livingroomLevCompleted {
     position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.9);
-    display: flex;
-    align-items: left;
-    flex-direction: column;
-    z-index: 9999;
-}
-
-.instructionPg,
-.instructionHeading {
-    display: flex;
-    align-items: left;
-    flex-direction: column;
-}
-
-
-#bathroomLevCompleted,
-#bedroomLevCompleted,
-#kitchenLevCompleted,
-#livingroomLevCompleted {
-
+    background-color: rgba(0, 0, 0, 0.7);
     display: flex;
     justify-content: center;
     align-items: center;
